--- a/myweb/templates/login.html
+++ b/myweb/templates/login.html
@@ -7,25 +7,38 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
-<link rel="stylesheet" type="text/css" href="{%  static 'css/login.css'%}">
-<script src="{ % static 'js/eye.js' %}"></script>
-<link rel="shortcut icon" href="{ % static  'images/reddit.png' %}" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="{%  static '/css/login.css'%}">
+<script src="{ % static '/js/eye.js' %}"></script>
+<link rel="shortcut icon" href="{ % static  '/images/logo.png' %}" type="image/x-icon">
     <title>會員登入</title>
 </head>
 <body>
+<script>function show(){
+  var pwd =document.querySelector(".pwd");
+  var icon=document.querySelector(".icon");
+   if(pwd.type==='password'){
+     pwd.type="text";
+     icon.classList.remove('fa-eye-slash');
+     icon.classList.add('fa-eye');
+     }
+   else{
+     pwd.type="password"
+     icon.classList.remove('fa-eye');
+     icon.classList.add('fa-eye-slash');
+     } 
+ }</script> 
   <!-- Navbar (sit on top) -->
   <div class="w3-top" >
-    <div class="w3-bar w3-black  w3-padding-16 w3-card" id="myNavbar" style="height: 90px;" >
+    <div class="w3-bar w3-black  w3-padding-16 w3-card" id="myNavbar" style="height: 100px;" >
       <div class="w3-bar-left" >
-        <a href="#home" class="w3-bar-item"><img  src="{% static 'images/reddit.png' %}" alt="logo" width="30" height="30"></a>
-        <a href="#home" class="w3-bar-item w3-button" style="font-size: larger; font-weight: bold;"><b>Neuromancer</b></a>
+        <a href="{% url 'home' %}" class="w3-bar-item" style="margin-top: -15px;"><img  src="{% static '/images/logo.png' %}" alt="logo" width="40" height="40"></a>
+        <a href="{% url 'home' %}"class="w3-bar-item w3-button" style="font-size: larger; font-weight: bold;"><b>Neuromancer</b></a>
       </div>
     
       <!-- Right-sided navbar links -->
-      <a href="#home" class="w3-bar-item w3-button" style="margin-left: 410px; line-height: 16px; " ><h2><b>會員登入</b> </h2></a>
-      <div class="w3-right w3-hide-small" >
-          <a href="signup" class="w3-bar-item w3-button"><i class="fa fa-user-plus fa-xl"></i>&nbsp;會員註冊</a>
-          <a href="/" class="w3-bar-item w3-button"><i class="fa fa-house-chimney fa-xl"></i>&nbsp;回首頁</a>
+      <div class="w3-right " >
+          <a href="{% url 'register' %}" class="w3-bar-item w3-button"><i class="fa fa-user-plus fa-xl"></i>&nbsp;會員註冊</a>
+          <a href="{% url 'home' %}" class="w3-bar-item w3-button"><i class="fa fa-house-chimney fa-xl"></i>&nbsp;回首頁</a>
         </div>
      
     </div>
@@ -33,8 +46,8 @@
   <!-- main  -->
    <div class=" text-center main" style="margin-top: 100px;">
     <main class="form-signin">
-      <form method=post  autocomplete="off">
-        <p><img  src="{%static  'images/reddit.png' %}" alt="logo" width="50" height="50"></p>
+      <form method=post action='' autocomplete="off">
+        <p><img  src="{%static  '/images/logo.png' %}" alt="logo" width="50" height="50"></p>
         <h1 class="h3 mb-3 fw-normal"><b>會員登入</b> </h1>
            <!-- 帳號輸入框 -->
        <div class="form-group">
@@ -67,11 +80,25 @@
      </div>
        
         <button class="w-100 btn btn-lg btn-primary" type="submit">登入</button>
-        
+        <p><h3>{{message }}<a href="{% url 'register' %}">註冊</a></h3></p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
       </form>
     </main>
+    
    </div>
      
 
 </body>
+<!-- Footer -->
+<footer class="w3-center  w3-black w3-padding-64">
+    <p><img  src="{% static 'images/logo.png' %}" alt="logo" width="30" height="30">&nbsp;<b>Neuromancer</b></p>
+</footer>
+
 </html>
